--- a/src/app/home/select-role/select-role.component.html
+++ b/src/app/home/select-role/select-role.component.html
@@ -1,1 +1,28 @@
-<p>select-role works!</p>
+<div class="ui vertical stripe segment">
+    <div class="ui text container">
+
+        <div class="ui raised very padded text container segment">
+            <h2 class="ui header center aligned"><u>Select your Role</u></h2>
+
+            <div class="ui vertical stripe quote segment">
+                <div class="ui equal width stackable internally celled grid">
+                    <div class="center aligned row">
+                        <div class="column">
+                            <h3>Teacher</h3>
+                            <p>Click Here if you are a Teacher</p>
+                            <a class="ui submit large button primary">Proceed</a>
+                        </div>
+                        <div class="column">
+                            <h3>Student</h3>
+                            <p>Click Here if you are a Student</p>
+                            <a class="ui submit large button primary">Proceed</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
