--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,17 @@
-<div class="ui inverted vertical masthead center aligned segment">
+<div class="ui inverted vertical masthead center aligned segment" style="background: url('./assets/images/teacher4new.jpg') no-repeat center; background-repeat: no-repeat; width: 100%; height: 200px;">
 
-        <div class="ui container">
-
-
+        <div class="ui container" >
 
 
-        <div class="ui text container">
+
+
+        <div class="ui text container" >
             <h1 class="ui inverted header">
                 Mwalimu Wetu
             </h1>
-            <h2><u>Learning Redefined.</u></h2>
+            <h1>Let your Child learn from Professionals.</h1>
             <br>
-            <div class="ui huge primary button">Get Started <i class="right arrow icon"></i></div>
+            <div class="ui huge primary button">Get Started<i class="right arrow icon"></i></div>
         </div>
             </div>
 
@@ -22,10 +22,11 @@
     <div class="ui middle aligned stackable grid container">
         <div class="row">
             <div class="eight wide column">
-                <h3 class="ui header">We Help Companies and Companions</h3>
-                <p>We can give your company superpowers to do things that they never thought possible. Let us delight your customers and empower your needs...through pure data analytics.</p>
-                <h3 class="ui header">We Make Bananas That Can Dance</h3>
-                <p>Yes that's right, you thought it was the stuff of dreams, but even bananas can be bioengineered.</p>
+                <h3 class="ui header" id="start">We Bring Teachers and Students Together</h3>
+                <p>We believe that through education, everyone has the power to change their lives, and ultimately the world, for the better.
+                    Our platform provides a means of learning online. By doing so, we make it more convenient for learners everywhere.</p>
+                <h3 class="ui header">The next Frontier of Learning is Online.</h3>
+                <p>We are experts in the field of online education and are rigorous in selecting tutors and providing a reliable platform for all learning activities.</p>
             </div>
             <div class="six wide right floated column">
                 <img src="assets/images/wireframe/white-image.png" class="ui large bordered rounded image">
@@ -33,7 +34,7 @@
         </div>
         <div class="row">
             <div class="center aligned column">
-                <a class="ui huge button">Check Them Out</a>
+<!--                <a class="ui huge button">Proceed</a>-->
             </div>
         </div>
     </div>
@@ -44,13 +45,18 @@
     <div class="ui equal width stackable internally celled grid">
         <div class="center aligned row">
             <div class="column">
-                <h3>"What a Company"</h3>
-                <p>That is what they all say about us</p>
+                <h2>“In times where small instructor-led classrooms tend to be the exception, electronic learning solutions can offer more collaboration and interaction with experts and peers, as well as a higher
+                    success rate than the live alternative.”</h2>
+                <p>- Keith Bachman, Corporate eLearning Executive, W.R. Hambrecht and Assoc.</p>
             </div>
             <div class="column">
-                <h3>"I shouldn't have gone with their competitor."</h3>
+                <h2>
+                    “Training developers need to integrate technology seamlessly into the curriculum instead of
+                    viewing it as an add-on, an after-thought, or an event.”
+                </h2>
                 <p>
-                    <img src="assets/images/avatar/nan.jpg" class="ui avatar image"> <b>Nan</b> Chief Fun Officer Acme Toys
+                   - Heidi Hayes Jacobs, Executive Director of the Curriculum Mapping Institute, author, educator.
+
                 </p>
             </div>
         </div>
@@ -60,13 +66,24 @@
 <div class="ui vertical stripe segment">
     <div class="ui text container">
         <h3 class="ui header">How it Works</h3>
-        <p>Instead of focusing on content creation and hard work, we have learned how to master the art of doing nothing by providing massive amounts of whitespace and generic content that can seem massive, monolithic and worth your attention.</p>
+        <p>We have numerous teachers that offer different material to students. All a student has to do is create an account with us then select a tutor of their choice.</p>
         <a class="ui large button">Read More</a>
         <h4 class="ui horizontal header divider">
             <a href="#">Case Studies</a>
         </h4>
-        <h3 class="ui header">Did We Tell You About Our Bananas?</h3>
-        <p>Yes I know you probably disregarded the earlier boasts as non-sequitur filler content, but its really true. It took years of gene splicing and combinatory DNA research, but our bananas can really dance.</p>
-        <a class="ui large button">I'm Still Quite Interested</a>
+        <h3 class="ui header center aligned column">Here are institutions that we work with</h3>
+        <div class="ui middle aligned stackable grid container">
+            <div class="row">
+                <div class="six wide column">
+                    <img src="assets/images/arope.jpeg" class="ui large bordered rounded image">
+                </div>
+                <div class="six wide right floated column">
+                    <img src="assets/images/wireframe/white-image.png" class="ui large bordered rounded image">
+                </div>
+            </div>
+            <div class="row">
+                <div class="center aligned column">
+                </div>
+            </div>
     </div>
 </div>
