--- a/src/app/teacher/teacherHome/teacher-home.component.html
+++ b/src/app/teacher/teacherHome/teacher-home.component.html
@@ -1,14 +1,21 @@
 <div class="ui vertical stripe segment">
     <div class="ui text container">
 
+
         <h2 class="ui header">
+            <p>Step 1</p>
             <img class="ui image" src="/assets/images/book.png">
             <div class="content">
                 <u>Background Check.</u>
             </div>
+
+            <h4 class="ui dividing header">Fill out this form to complete the first step.</h4>
+            <br>
         </h2>
 
-        Click here to download code of conduct. <a href="/assets/documents/doc.pdf" target="_blank">Code of Conduct</a>
+        Click here to download code of conduct. <a href="/assets/documents/Mwalimu Wetu - Code of Coduct Document.pdf" target="_blank">Code of Conduct</a>
+
+
 
         <br>
 
