Updated e-learning app latest

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -142,7 +142,7 @@
                 <ng-container *ngIf="signedin && currentPath !== '/'">
 
                     <a class="ui inverted button" style="margin-right: 5%" routerLink="/inbox" routerLinkActive="active">
-                        Inbox
+                        Account
                     </a>
 
                     <a class="ui inverted button" routerLink="/signout" routerLinkActive="active">
