--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -74,13 +74,19 @@
         <h3 class="ui header center aligned column">Here are institutions that we work with</h3>
         <div class="ui middle aligned stackable grid container">
             <div class="row">
-                <div class="six wide column">
-                    <img src="assets/images/arope.jpeg" class="ui large bordered rounded image">
-                    <p class="ui center aligned segment">Background Checks</p>
+                <div class="four wide column">
+                    <img src="assets/images/arope.jpeg" class="ui large rounded image">
+
+<!--                    <p class="ui center aligned segment">Background Checks</p>-->
                 </div>
-                <div class="six wide right floated column">
-                    <img src="assets/images/teams.png" class="ui large bordered rounded image">
-                    <p class="ui center aligned segment">Microsoft Teams for holding Meetings</p>
+                <div class="four wide right floated column">
+                    <img src="assets/images/teams.png" class="ui large rounded image">
+<!--                    <p class="ui center aligned segment">Microsoft Teams for holding Meetings</p>-->
+                </div>
+
+                <div class="four wide right floated column">
+                    <img src="assets/images/microsoft.jpg" class="ui large rounded image">
+<!--                    <p class="ui center aligned segment">Microsoft Teams for holding Meetings</p>-->
                 </div>
             </div>
             <div class="row">
