--- a/src/app/teacherAuth/signin/signin.component.html
+++ b/src/app/teacherAuth/signin/signin.component.html
@@ -1,34 +1,62 @@
 <div class="ui vertical stripe segment">
   <div class="ui text container">
 
-  <h3>Sign In</h3>
-<form (ngSubmit)="onSubmit()" class="ui form" [formGroup]="authForm">
-  <app-input
-    inputType="text"
-    label="Email"
-    [control]="authForm.get('email')"
-  >
-  </app-input>
 
-  <app-input
-    inputType="password"
-    label="Password"
-    [control]="authForm.get('password')"
-  >
-  </app-input>
+    <div class="ui one column stackable center aligned page grid">
+      <div class="column twelve wide">
+        <h2 class="ui teal image header">
 
-  <div *ngIf="authForm.errors" class="ui red basic label">
-    <p *ngIf="authForm.errors.credentials">
-      Invalid username or password
-    </p>
-  </div>
+          <div class="content">
+            Sign In
+          </div>
+        </h2>
 
-  <div>
-    <button class="ui submit button primary">
-      Submit
-    </button>
-  </div>
-</form>
+        <div class="ui stacked segment">
+          <form (ngSubmit)="onSubmit()" class="ui form" [formGroup]="authForm">
+            <app-input
+                    style="text-align: left"
+                    inputType="text"
+                    label="Email"
+                    [control]="authForm.get('email')"
+            >
+            </app-input>
+
+            <app-input
+                    style="text-align: left"
+                    inputType="password"
+                    label="Password"
+                    [control]="authForm.get('password')"
+            >
+            </app-input>
+
+            <div *ngIf="authForm.errors" class="ui red basic label">
+              <p *ngIf="authForm.errors.credentials">
+                Invalid username or password
+              </p>
+            </div>
+
+            <div>
+              <button class="ui fluid large teal submit button">
+                Submit
+              </button>
+            </div>
+          </form>
+
+          <div class="ui message">
+            Are you new here? <a routerLink="/signup">Create account</a>
+<!--            <div class="ui fluid large teal submit button" routerLink="/signup">Create Account</div>-->
+          </div>
+
+
+        </div>
+
+
+      </div>
+    </div>
+
+
+
+
 
   </div>
 </div>
