Add spacing to sign in and sign up

--- a/src/app/teacherAuth/signin/signin.component.html
+++ b/src/app/teacherAuth/signin/signin.component.html
@@ -1,6 +1,7 @@
 <div class="ui vertical stripe segment">
   <div class="ui text container">
 
+  </div>
 
     <div class="ui one column stackable center aligned page grid">
       <div class="column twelve wide">
@@ -55,8 +56,9 @@
     </div>
 
 
-
-
+  <div style="height: 150px">
 
   </div>
+
+
 </div>
