--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -125,6 +125,7 @@
                 <i class="sidebar icon"></i>
             </a>
             <a class="active item" href="/">Home</a>
+<!--            <a class="active item" href="/"><img src="assets/images/mw_logo.png" class="ui small rounded image" style="float: left; position: absolute; top: 2px; left: 80px; width:220%"></a>-->
             <div class="right item">
 
 
