updated frontend for azyre routes

--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -26,7 +26,7 @@
       Email is taken
     </p>
     <p *ngIf="control.errors.noConnection">
-      Can't tell if email is taken
+      Email is taken
     </p>
   </div>
 </div>
